// Copyright 2022 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.devicetrust.v1;

import "google/protobuf/timestamp.proto";
import "teleport/devicetrust/v1/os_type.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/devicetrust/v1";

// DeviceCollectedData contains information gathered from the device during
// various ceremonies.
// Gathered information must match, within reason, the original registration
// data and previous instances of collected data.
message DeviceCollectedData {
  // Time of data collection, set by the client.
  // Required.
  google.protobuf.Timestamp collect_time = 1;

  // Time of data collection, as received by the server.
  // System managed.
  google.protobuf.Timestamp record_time = 2;

  // Device operating system.
  // Required.
  OSType os_type = 3;

  // Device serial number.
  // Required for macOS devices.
  string serial_number = 4;
}
